* started work on mobile view of header and nav design updates, fixed css bugs for event list/home pagee

--- a/src/components/App/App.sass
+++ b/src/components/App/App.sass
@@ -1,12 +1,12 @@
 @import "~style/utils/variables.sass"
+@import "~style/utils/mixins.sass"
 
 .container
   height: 100%
+  max-width: $max-width
+  margin: 0 auto 
 
 .content-wrapper
   background-color: $main-white
-
-// Breakpoints
-@media only screen and (max-width: $break-max-lg)
-  .content-wrapper
-    border-radius: 0
+  max-width: $max-width
+  margin: 0 auto
