--- a/src/components/EventSearchInput/EventSearchInput.sass
+++ b/src/components/EventSearchInput/EventSearchInput.sass
@@ -1,7 +1,7 @@
 @import "~style/utils/variables.sass"
 
 .input-search-wrapper
-  display: block
+  display: inline-block
   position: relative
 
   input
