--- a/src/style/utils/variables.sass
+++ b/src/style/utils/variables.sass
@@ -4,6 +4,7 @@ $max-width: 1080px
 // Spacing
 $base-spacing: 40px
 $gutter-margin: 20px
+$gutter-margin-mobile: 10px
 
 // Border
 $border-radius-small: 3px
